...
            container.leadingAnchor.constraint(equalTo: leadingAnchor),
            container.bottomAnchor.constraint(equalTo: bottomAnchor),
            container.trailingAnchor.constraint(equalTo: trailingAnchor),
        ])
        
        container.isAccessibilityElement = true
        container.accessibilityIdentifier = "profileLogout"
        container.accessibilityTraits = .button
        
        
        let tap = UITapGestureRecognizer(target: self, action: #selector(logoutProile))
        container.addGestureRecognizer(tap)
        
...
