...
    private var isLoyaltyCollapsed = false
    override func viewDidLoad() {
        
        
        
        super.viewDidLoad()
        view.accessibilityIdentifier = "mainScreen"
        view.backgroundColor = UIColor(named: "Background")
        headerView.translatesAutoresizingMaskIntoConstraints = false
        loyaltyView.translatesAutoresizingMaskIntoConstraints = false
        filmCollectionView.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(headerView)
        view.addSubview(loyaltyView)
...
